--- a/_posts/2021-10-21-IMD-null-cc-1.md
+++ b/_posts/2021-10-21-IMD-null-cc-1.md
@@ -2,3 +2,45 @@
 layout: post
 title: Week of 20211018 Cell Culture Preparation: IMD Nulls
 ---
+
+# Cell Culture Preparation of IMD Null Eggs
+
+### 20211018 Making New Yeast Paste
+
+- The last flasks I made were overgrown with what we think is yeast, I needed to make new yeast. The yeast may not have been completely killed, so I wanted to autoclave it twice this time
+- I made fresh yeast paste by using ~20mL of dry yeast, ~20mL of molecular grade water, and a few mL of apple juice. I added in some extra yeast to get the consistency right. Wanted it to be kind of like royal icing
+- Autoclaved on program 3 once on 20211018
+
+### 20211019 Autoclave Yeast 2nd Time and Prep Apple Juice Plates
+
+- Autoclaved yeast again in the morning, program 3
+- I also autoclaved the yeast spoon that was used for mixing and is also used for plating the yeast. Even though it is washed after use, there may have been left over alive yeast on it, so I wanted to make sure it was sterile. I autoclaved it in the small autoclave in 4055
+- In the afternoon, made apple juice yeast plates with two streaks of yeast on each plate
+
+### 20211020 Set Up Flies
+
+- Set up 3 vials of flies in the cage with the apple juice plate
+- This was around 3:30pm
+
+### 20211021 Day 1 Cell Culture
+- Collected the apple juice plate at ~3pm in the afternoon and replaced the cage with a new plate for more laying
+- Followed the [Domeless Day 1](https://meschedl.github.io/Unckless-Lab-Notebook-Maggie/2021/10/12/domeless-cell-culture-1.html) steps for preparing the eggs and cell culture
+- Used 420 medium made on 20211014
+- Used a new bottle of Trypsin, opened this day 20211021
+- For added sterility: after every time doing something out of the TC hood, I sprayed my gloves with ethanol before going back into the hood (centrifuges, etc.)
+- Flasks were left to settle overnight and checked the next day
+- Supplies were put in the autoclave program 3 and left overnight (after 5pm)
+
+
+### 20211022 Day 2 Cell Culture
+- Took things out of the autoclave first thing in the am
+- Collected apple juice plate at ~9:30am, flies were placed in the morgue
+-  Followed the [Domeless Day 1](https://meschedl.github.io/Unckless-Lab-Notebook-Maggie/2021/10/12/domeless-cell-culture-1.html) steps for preparing the eggs and cell culture
+- Used 420 medium made on 20211014
+- Used trypsin opened 2021102
+- For added sterility: after every time doing something out of the TC hood, I sprayed my gloves with ethanol before going back into the hood (centrifuges, etc.)
+- Flasks were left to settle over the weekend before looking at them
+
+Images of flasks made 20211021: some single cells and cell clumps, looking pretty good.
+![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20211021-IMDnull-cc-2.jpeg)
+![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20211021-IMDnull-cc-1.jpeg)
