adding image to post

--- a/_posts/2021-10-21-IMD-null-cc-1.md
+++ b/_posts/2021-10-21-IMD-null-cc-1.md
@@ -44,3 +44,6 @@ title: Week of 20211018 Cell Culture Preparation: IMD Nulls
 Images of flasks made 20211021: some single cells and cell clumps, looking pretty good.
 ![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20211021-IMDnull-cc-2.jpeg)
 ![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20211021-IMDnull-cc-1.jpeg)
+
+Images of flask made 20211022: lots of single cells. This picture was taken 20211025.
+![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20211022-IMDnull-cc-day3.jpeg)
