trying to get IMD null to post

--- a/_posts/2021-10-21-IMD-null-cc-1.md
+++ b/_posts/2021-10-21-IMD-null-cc-1.md
@@ -15,7 +15,7 @@ title: Week of 20211018 Cell Culture Preparation: IMD Nulls
 
 - Autoclaved yeast again in the morning, program 3
 - I also autoclaved the yeast spoon that was used for mixing and is also used for plating the yeast. Even though it is washed after use, there may have been left over alive yeast on it, so I wanted to make sure it was sterile. I autoclaved it in the small autoclave in 4055
-- In the afternoon, made apple juice yeast plates with two streaks of yeast on each plate
+- In the afternoon, made apple juice yeast plates with 2 streaks of yeast on each plate
 
 ### 20211020 Set Up Flies
 
