--- a/_posts/2021-11-01-HMW-4.md
+++ b/_posts/2021-11-01-HMW-4.md
@@ -3,7 +3,7 @@ layout: post
 title: HMW Extraction Attempt 4
 ---
 
-# Attempting Again the Genomic Tip [Blood & Cell Culture DNA Midi Kit](https://www.qiagen.com/sg/shop/pcr/blood-and-cell-culture-dna-midi-kit/) HMW Extraction on One Cell Control and One DiNV Positive Cell Culture Samples with a Faster Centrifuge
+## Attempting Again the Genomic Tip [Blood & Cell Culture DNA Midi Kit](https://www.qiagen.com/sg/shop/pcr/blood-and-cell-culture-dna-midi-kit/) HMW Extraction on One Cell Control and One DiNV Positive Cell Culture Samples with a Faster Centrifuge
 
 
 **Notes**
@@ -111,4 +111,4 @@ title: HMW Extraction Attempt 4
   - CC2 top: 4.66 ug/mL (ng/ul)
   - CC2 bottom: 4.72 ug/mL (ng/ul)
 
-Quants this time are higher than the last successful [extraction attempt](https://meschedl.github.io/Unckless-Lab-Notebook-Maggie/2021/10/19/HMW-2.html). With the total volume of 50ul, the samples yielded ~200-300ng total DNA. This is actually ~10 times as much as the other attempt that worked, and I only increased the input by 2 times. This may still be low for further applications, but I think this is enough for me to do a gel on to try to separate out the 150kb size, especially if I use 15-20ul input. 
+Quants this time are higher than the last successful [extraction attempt](https://meschedl.github.io/Unckless-Lab-Notebook-Maggie/2021/10/19/HMW-2.html). With the total volume of 50ul, the samples yielded ~200-300ng total DNA. This is actually ~10 times as much as the other attempt that worked, and I only increased the input by 2 times. This may still be low for further applications, but I think this is enough for me to do a gel on to try to separate out the 150kb size, especially if I use 15-20ul input.
