--- a/_posts/2021-11-09-HMW-Ex-5.md
+++ b/_posts/2021-11-09-HMW-Ex-5.md
@@ -90,4 +90,15 @@ title: HMW Extraction Attempt 5
 
 **20211110**
 
-- Tubes were gently flicked, spun down, and placed on a rocking stand for another 24 hrs
+- Tubes were gently flicked, spun down, and placed on a rocking stand for another 24 hrs at least
+
+**20211112**
+- Qubit of top and bottom of the tubes
+- 0hr
+  - Top: 1.46ng/ul
+  - Bottom: 1.45ng/ul
+- 120hr
+  - Top: 88.6ng/ul
+  - Bottom: 93.3ng/ul
+- The 120hr is by far the best quant that I've gotten
+- The 0hr is pretty low but I don't think I'll need it for anything anyways
