--- a/_posts/2021-11-09-HMW-Ex-5.md
+++ b/_posts/2021-11-09-HMW-Ex-5.md
@@ -59,7 +59,7 @@ title: HMW Extraction Attempt 5
 **Genomic Tip Extraction**
 - Set up two tips over 50mL conicals
 - Added 4mL buffer GBT to each tip and let drip
-  - Drip times were pretty consistent between the tips, the POS-2 sample tip was a little slower, but not by much. Max drip time was ~10 min which is great
+  - Drip times were pretty consistent between the tips
 - Vortexed sample tubes briefly
 - Cut p1000 tips for each samples
 - Added total volume (~5mL) of each sample to their respective tips and let drip
