--- a/_posts/2021-11-23-HMW-Ex-6.md
+++ b/_posts/2021-11-23-HMW-Ex-6.md
@@ -79,4 +79,13 @@ title: 2 and 3mL HMW Extractions
   - Here I saw what should be the DNA pellet come up when I added the TE
   ![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20211123-DNA.jpeg)
 - Tubes were placed in the incubator upright at 55 degrees for 1 hour
-- Tubes were then placed on a rocking machine overnight, and will probably be left until Friday out, and then be put in the fridge for the weekend 
+- Tubes were then placed on a rocking machine overnight, and will probably be left until Friday out, and then be put in the fridge for the weekend
+
+
+**20211129 Qubit**
+- Measured top and bottom of each tube liquid because HMW DNA can be clumpy
+  - 3mL top: 110ng/ul
+  - 3mL bottom: 120ng/ul
+  - 2mL top: 42.3ng/ul
+  - 2mL bottom: 43.2ng/ul
+- I noticed that the DNA might not be completely in suspension. Even after being left to resuspend for days there were still flakes of DNA(?) at the bottom of the tubes. I flicked them many times but they didn't go into solution. I may have over dried the pellet by leaving it for ~30 minutes (google suggestion), and I will try to pipette out any excess ethanol next time and dry for only 2 minutes. 
