--- a/_posts/2021-12-08-3mLB-p47-and-RPL11.md
+++ b/_posts/2021-12-08-3mLB-p47-and-RPL11.md
@@ -69,14 +69,26 @@ title: 3mLB-120hr Zymo Gel Extractioned DNA PCR with RPL11 and p47
 - Used [NEB 100bp ladder](https://www.neb.com/products/n3231-100-bp-dna-ladder#Product%20Information) this time because I'm not looking for anything larger than 500bp
 - Ran gel for 30 minutes at 100V
 - Incubated gel in EtBr for ~45 minutes
-- Gel image is not very good, everything is blurry. I think I poured the gel too high to get a good view (?), although it didn't look good when I flipped it upside down. It looks like none of my gel extractions amplified, except maybe RPL11 for the 3mLB-150 sample. I could sort of see it by eye (gel image is worse than by eye looking at it)
+- Gel image is not very good, everything is blurry. I think I poured the gel too high to get a good view (?), although it still didn't look good when I flipped it upside down. It looks like none of my gel extractions amplified, except maybe RPL11 for the 3mLB-150 sample. I could sort of see it by eye (gel image is worse than by eye looking at it)
 ![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20211209-PCR-gel.jpeg)
 - I dubiously "enhanced" the gel image to be more contrasting to maybe see evidence of the "band" in 3mLB-150 for RPL11. I can sort of see it better but I am not convinced. But it gives me hope.
 ![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20211209-PCR-gel-inhanced.jpeg)
 
 Things I want to try and I'm thinking about:
 - Re-gel the PCR products, slower and longer gel
-- 3mLB-150 had the highest DNA concentration out of the gel extractions, maybe that has something to do with seeing only that one? But I tried to compensate for that
+- 3mLB-150 had the highest DNA concentration out of the gel extractions, maybe that has something to do with seeing only that one? But I tried to compensate for that. All the reactions should have 8-9ng of DNA input
 - Why can't I see any primer dimer in any of the gel extraction PCRs, if there's no amplification, where is the primer? They all get the same master mix
 - Need to try adding one of the gel extraction samples to a gel and see if it all floats out
-- I want to contact Zymo to see if they have suggestions 
+- I want to contact Zymo to see if they have suggestions
+
+**20211213 Re-Gel**
+- Wanted to re-gel the PCRs from last week because the gel was so blurry and hard to read
+- Used leftover gel and re-heated it up
+- Used Themofisher 1kb plus ladder
+- I also added in 5ul of the 3mLB-150 gel extraction sample to the gel. This sample sort of floated up out of the well (a sure sign of some kind of contamination), so I'm not sure if I'll be able to see it in the gel
+![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20211213-pre-gel.jpeg)
+- Because these PCRs had already been gelled once, there was less than 5ul less in each tube, so they may not show up well in the gel
+- Ran gel for 40 minutes at 80V
+- Incubated gel in EtBr for ~60 minutes
+- Not really able to see anything different in this gel than the one above. I was surprised to see that there was visible gel extraction product in this gel because a lot of stuff came out of the well. But it looks like it's still pretty HMW, maybe above the 20kb mark. I could visually see maybe something again at the RPL11 3mLB-150, but it doesn't really show up in the picture
+![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20211213-gel.jpeg)
