adding cc posts

--- a/_posts/2021-12-13-cc-myd88-2.md
+++ b/_posts/2021-12-13-cc-myd88-2.md
@@ -58,3 +58,11 @@ title: Week of 20211213 Cell Culture Preparation - 14091 Myd88
 ![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20211216-cc-myd88-cells-imaged-20211217.jpeg)
 - Flasks from 20211217 had very many cells
 ![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20211217-cc-myd88-cells.jpeg)
+
+### Fluid Additions and Imaging
+- 1mL of 20% Schneider's medium was added to 1 flask from 20211217. These are marked with FA
+- On 20220111 an FA flask and a non FA flask were imaged. They looked similar. There is a lot of debris, most likely junk from dying cells. These cells were pelleted at an incorrect centrifugation speed so this may be why they are unhappy/dying. However it does show that there are some cells that look alive still in the flasks
+- Non FA flask:
+![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20211217-myd88-cc-imaged-20220111.jpeg)
+- FA flask:
+![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20211217-myd88-cc-FA-imaged-20220111.jpeg)
