--- a/_posts/2022-01-18-spz-cc-3.md
+++ b/_posts/2022-01-18-spz-cc-3.md
@@ -9,7 +9,7 @@ title: Week of 20220117 Cell Culture Preparation - SPZ
 - Made fresh yeast paste
 - Then that afternoon, made 2 apple juice yeast plates with 2 steaks of yeast on each plate
 
-### 20220119 Setting up SPZ null Flies to Lay
+### 20220119 Setting up SPZ Flies to Lay
 
 - Set up 7 vials of SPZ flies to lay on the yeast plate at about 2pm
 
