--- a/_posts/2022-01-24-IMD-null-cc-4.md
+++ b/_posts/2022-01-24-IMD-null-cc-4.md
@@ -7,7 +7,7 @@ title: Week of 20220124 Cell Culture Preparation - IMD Null
 
 #### 20220124 Making Yeast Plates
 - Used yeast paste made the week before
-- Then that afternoon, made 2 apple juice yeast plates with 2 steaks of yeast on each plate
+- Then that afternoon, made 2 apple juice yeast plates with 2 streaks of yeast on each plate
 
 ### 20220125 Setting up IMD null Flies to Lay
 
@@ -17,8 +17,17 @@ title: Week of 20220124 Cell Culture Preparation - IMD Null
 - Collected the apple juice plate at ~9:30am and replaced the cage with a new plate for more laying
 - Roughly followed the [Prepping Cell Culture Protocol](https://meschedl.github.io/Unckless-Lab-Notebook-Maggie/2021/10/26/cell-culture-protocol.html), but also used the modifications from the [innubila cell culture last week](https://meschedl.github.io/Unckless-Lab-Notebook-Maggie/2022/01/10/innubila-laying-plate-test.html) that did not use trypsin and minimized washes. I have a hypothesis that using the trypsin is hurting the cells because the innubila cells from last week look more alive and larger than all of my other cells
 - Used the 0% FBS and 20% FBS Schneider's medium with no gentamicin made the week before, and new medium was made for the next day
-- There were many more eggs on the plate this day
+- There were a good amount of eggs on the plate
 - Flasks were imaged in the afternoon:
 ![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20220126-imdnull-cell-culture.jpeg)
 
 ### 20220127 Day 2 Cell Culture
+- Collected the apple juice plate at ~9:30am and replaced the cage with a new plate for more laying
+- Roughly followed the [Prepping Cell Culture Protocol](https://meschedl.github.io/Unckless-Lab-Notebook-Maggie/2021/10/26/cell-culture-protocol.html), but also used the modifications from the [innubila cell culture last week](https://meschedl.github.io/Unckless-Lab-Notebook-Maggie/2022/01/10/innubila-laying-plate-test.html) that did not use trypsin and minimized washes.
+- Used the 0% FBS and 20% FBS Schneider's medium with no gentamicin made the previous day
+- There were so many eggs on the plate, it created a huge pellet
+- Flasks were imaged after settling:
+![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20220127-imd-null-cc-1.md.jpeg)
+![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20220127-imd-null-cc-2.md.jpeg)
+
+Almost all the circles are cells in these images, it's pretty incredible!
