--- a/_posts/2022-04-14-50ul-77-pcrs.md
+++ b/_posts/2022-04-14-50ul-77-pcrs.md
@@ -31,4 +31,30 @@ title: 50ul 77kb PCRs
 - Afterwards 5ul of the PCR was run on a 1% gel for 35 minutes at 90V:
 ![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20220414-gel.jpeg)
 
-Looks good! There is a slight amount of smearing/potential other bands. Will I want to reduce the primer concentration on this?
+Looks good!
+
+**20220508 77-DiNV-2**
+
+- I modified the PCR a little bit for this to get only 1 band (and at the right size)
+- I used 3/4th of the usual amount of primers
+- Made master mix on ice:
+  - 5ul GoTaq * 5 * 2.2 = 55ul
+  - 0.187ul 77-F-1 * 5 * 2.2 = 2.057ul
+  - 0.187ul 77-R-1 * 5 * 2.2 = 2.057ul
+  - 3.63 ul H2O * 5 * 2.2 = 39.93ul
+- Vortexed and spun down mix
+- Added 45ul of mix to 2 PCR tubes
+- Added 5ul of 2mL DNA to the first tube
+- Added 5ul molecular grade water to the second tube
+- Vortexed and spun down PCR tubes
+- Placed PCR tubes in the thermocycler 77-DiNV-1 program
+  - 95 degrees C 2 min
+  - _95 degrees C 30 sec_
+  - _53 degrees C 1 minute_
+  - _72 degrees C 2 minutes_
+  - 72 degrees C 5 min
+  - 12 degrees C hold
+  - Italic lines are cycled 34 times
+- I made sure to change the volume to 50ul
+- Afterwards 5ul of the PCR was run on a 1% gel for 35 minutes at 90V:
+![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20220508-772-gel.jpeg)
